# pa-spl

./: .Cargo.toml  .gitignore  Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yaml  sec.yaml
docs/: msrv.md
examples/read-decibel-value/: Cargo.toml  README.md
examples/read-decibel-value/src/: main.rs
src/: lib.rs
target-tests/: Cargo.toml  README.md
target-tests/.cargo/: config.toml
target-tests/tests/: pa-spl.rs  pcb-artists-spl.rs
