[package]
authors = ["Jason Scott"]
description = "A no_std driver for the PCB Artists SPL module"
edition = "2021"
keywords = []
name = "pcb-artists-spl"
readme = "README.md"
version = "0.1.0"

[dependencies]
embedded-hal = "1.0.0"
crc-any = { version = "2.3.5", default-features = false }

[dev-dependencies]
embedded-hal-mock = "0.11.1"
