[package]
authors = ["Jason Scott"]
description = "A no_std driver for the PCB Artists SPL module"
edition = "2021"
keywords = []
name = "pa-spl"
readme = "README.md"
version = "0.1.0"

[dependencies]
bitfield-struct = "0.8.0"
defmt = "0.3.8"
embedded-hal = "0.2.7"

[dev-dependencies]
embedded-hal-mock = "0.11.1"
