[package]
name = "pa-spl"
description = "A no-std embedded-hal I2C driver for the PCB Artists SPL module"
authors = ["Jason Scott <reachme@jasonpscott.com>"]
categories = ["embedded", "no-std"]
edition = "2021"
exclude = [
    "/.github",
    "/.vscode",
    "/.gitignore",
    "docs/pull_request_template.md",
    "docs/vendor/*",

]
homepage = ""
keywords = [
    "audio",
    "embedded",
    "embedded-hal-driver",
    "no-std",
    "sound",
    "spl",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/EngJay/pa-spl"
rust-version = "1.65"
version = "0.1.0"

[dependencies]
bitfield-struct = "0.8.0"
defmt = "0.3.8"
embedded-hal = "0.2.7"

[dev-dependencies]
embedded-hal-mock = "0.11.1"

[features]
external_mic = []

[profile.dev]
opt-level = "s"
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
