[package]
authors = ["Jason Scott"]
edition = "2021"
name = "target-tests"
publish = false
version = "0.1.0"

# [[bin]]
# name = "pcb-artists-spl-test"
# test = true
# bench = true
# path = "tests/pcb-artists-spl.rs"

# [bin]
# name = "pcb-artists-spl-test"
# path = "src/main.rs"          # Path to your main binary file

[[test]]
name = "pcb-artists-spl"
harness = false

[dev-dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
stm32f3xx-hal = { version = "0.10.0", features = ["stm32f303xc"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
defmt-test = "0.3.2"
panic-probe = { version = "0.3.2", features = ['print-defmt'] }
pcb-artists-spl = { path = ".." }

[features]
default = ['defmt-trace']
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[profile.dev]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'

[profile.test]
codegen-units = 1
incremental = false
lto = 'fat'
