[package]
name = "target-tests"
description = "Hardware-in-the-loop test suite using a PCB Artists SPL module and STM32F3 Discovery"
authors = ["Jason Scott <reachme@jasonpscott.com>"]
edition = "2021"
publish = false
version = "0.1.0"

# [[bin]]
# name = "pa-spl-test"
# test = true
# bench = true
# path = "tests/pa-spl.rs"

# [bin]
# name = "pa-spl-test"
# path = "src/main.rs"          # Path to your main binary file

[[test]]
name = "pa-spl"
harness = false

[dev-dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
stm32f3xx-hal = { version = "0.10.0", features = ["stm32f303xc"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
defmt-test = "0.3.2"
panic-probe = { version = "0.3.2", features = ['print-defmt'] }
pa-spl = { path = ".." }

[features]
default = ['defmt-trace']
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[profile.dev]
codegen-units = 1
incremental = false
lto = 'fat'
opt-level = 's'

[profile.test]
codegen-units = 1
incremental = false
lto = 'fat'
